[tool.poetry]
name = "addntravel-extractor"
version = "0.1.0"
description = "Data extractor for AddnTravel destinations using Azure OpenAI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.6.1"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
